# cairo-vm

./: *.cairo  .gitignore  .rusty-hook.toml  .tarpaulin.toml  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-MIT  Makefile  README.md  RELEASE.md  _keccak.cairo  bogus_file.md  cairo_layout_params_file.example.json  cairo_layout_params_file.json  cairo_rs.py  codecov.yml  corelib  crates.js  data.js  fuzzer_program.py  hint.cairo  hint.json  hyper-threading-workflow.sh  hyper-threading.sh  index.html  install.sh  lamdaworks-benchmarks.md  lamdaworks-benchmarks.sh  mem_sum  program.cairo  release-plz.toml  requirements.txt  rust-toolchain  search-index.js  settings.html  shell.nix  source-files.js  (+4 more)
cairo-1-hint-processor/: Cargo.toml
cairo-1-hint-processor/src/: dict_manager.rs  hint_processor.rs  lib.rs
cairo-vm-cli/: Cargo.toml  air_input.pub
cairo-vm-cli/fuzz/: Cargo.toml
cairo-vm-cli/fuzz/fuzz_targets/: fuzz_target_1.rs
cairo-vm-cli/src/: main.rs
cairo-vm-tracer/: Cargo.toml
cairo-vm-tracer/src/: lib.rs  tracer.rs  tracer_data.rs
cairo-vm-tracer/src/error/: mod.rs  trace_data_errors.rs
cairo-vm-tracer/src/types/: memory_access.rs  mod.rs
cairo-vm-tracer/static/: index.html  tracer.js
cairo1-run/: Cargo.toml  Makefile  README.md  add.cairo  add_func.cairo  array_bug_program.cairo  bug_program.cairo  double_func copy.cairo  factorial.cairo  fibonacci.cairo  infinite.cairo  infinite.mem  memory  program.cairo  program_if.cairo  trace
cairo1-run/src/: cairo_run.rs  error.rs  lib.rs  main.rs  serialize_output.rs
custom_hint_example/: Cargo.toml  Makefile  custom_hint.cairo
custom_hint_example/src/: main.rs
ensure-no_std/: Cargo.toml
ensure-no_std/src/: main.rs
ensure_no_std/: Cargo.toml
ensure_no_std/src/: main.rs
examples/hyper_threading/: Cargo.toml  README.md  hyper-threading-workflow.sh  hyper-threading.sh  hyper_threading_main
examples/hyper_threading/src/: main.rs
examples/wasm-demo/: Cargo.toml  README.md  index.html
examples/wasm-demo-cairo1/: Cargo.toml  README.md  bitwise.cairo  bitwise.sierra  index.html
examples/wasm-demo-cairo1/src/: bitwise.cairo  lib.rs
examples/wasm-demo/src/: lib.rs
felt/: Cargo.toml
felt/proptest-regressions/: lib.txt
felt/src/: Untitled-1.md  arbitrary.rs  arbitrary_bigint_felt.rs  arbitrary_lambdaworks.rs  bigint_felt.rs  ibig_felt.rs  lib.rs  lib_bigint_felt.rs  lib_lambdaworks.rs  malachite_felt.rs  rug_felt.rs  u64_felt.rs
fuzzer/: Cargo.toml  README.md  json.dict
fuzzer/diff_fuzzer/: README.md  cairo_program_gen.py  hint_reader.py  memory_checker.py  mul_div_mod_hint.py  random_hint_fuzzer.py  test_gen.py  uint256_mul_div_mod.cairo
fuzzer/src/: cairo_compiled_programs_fuzzer.rs  fuzz_blake.rs  fuzz_cairo_source.rs  fuzz_json.rs  fuzz_program.rs  main.rs  py_export.rs  utils.rs
hint_accountant/: Cargo.toml
hint_accountant/src/: main.rs
hint_accountant/whitelists/: garaga.json
python-hints/: Cargo.toml  pyproject.toml
python-hints/.env/: pyvenv.cfg
python-hints/src/: lib.rs
vm/: Cargo.toml  hola
vm/src/: air_private_input.rs  air_public_input.rs  cairo_run.rs  lib.rs  math_utils.rs  program_hash.rs  prover_input_info.rs  typed_operations.rs  utils.rs  with_std.rs  without_std.rs
vm/src/hint_processor/: hint_processor_definition.rs  hint_processor_utils.rs  mod.rs
vm/src/hint_processor/builtin_hint_processor/: bigint.rs  blake2s_hash.rs  blake2s_utils.rs  bootloader_hints.rs  builtin_hint_processor_definition.rs  dict_hint_utils.rs  dict_manager.rs  ec_recover.rs  ec_utils.rs  excess_balance.rs  field_arithmetic.rs  find_element_hint.rs  garaga.rs  hint_code.rs  hint_utils.rs  keccak_utils.rs  math_utils.rs  memcpy_hint_utils.rs  memset_utils.rs  mod.rs  mod_circuit.rs  poseidon_utils.rs  pow_utils.rs  print.rs  segments.rs  set.rs  sha256_utils.rs  signature.rs  simulated_builtins.rs  skip_next_instruction.rs  squash_dict_utils.rs  uint256_utils.rs  uint384.rs  uint384_extension.rs  uint512_utils.rs  uint_utils.rs  usort.rs
vm/src/hint_processor/cairo_1_hint_processor/: circuit.rs  debug_print.rs  dict_manager.rs  hint_processor.rs  hint_processor_utils.rs  mod.rs
vm/src/math_utils/: blake2s_utils.rs  is_prime.rs  mod.rs
vm/src/serde/: deserialize_program.rs  deserialize_utils.rs  mod.rs  serialize_program.rs
vm/src/tests/: .gitignore  air_private_input_comparator.py  air_public_input_comparator.py  bitwise_test.rs  cairo_1_run_from_entrypoint_tests.rs  cairo_layout_params_file.json  cairo_pie_comparator.py  cairo_pie_test.rs  cairo_pie_test_output.json  cairo_run_test.rs  compare_all_pie_outputs.sh  compare_factorial_outputs_all_layouts.sh  compare_outputs_dynamic_layouts.sh  compare_vm_state.sh  compare_vm_state_dyn.sh  get_cairo_pie_tests.rs  memory_comparator.py  mod.rs  pedersen_test.rs  run_deprecated_contract_class_simplified.rs  segment_arena_test.rs  skip_instruction_test.rs  struct_test.rs
vm/src/types/: builtin_name.rs  exec_scope.rs  instruction.rs  layout.rs  layout_name.rs  mod.rs  program.rs  relocatable.rs
vm/src/types/errors/: cairo_pie_error.rs  math_errors.rs  mod.rs  program_errors.rs
vm/src/types/instance_definitions/: bitwise_instance_def.rs  builtins_instance_def.rs  cpu_instance_def.rs  diluted_pool_instance_def.rs  ec_op_instance_def.rs  ecdsa_instance_def.rs  keccak_instance_def.rs  mod.rs  mod_instance_def.rs  pedersen_instance_def.rs  poseidon_instance_def.rs  range_check_instance_def.rs  segment_arena_instance_def.rs
vm/src/vm/: hooks.rs  mod.rs  security.rs  vm_core.rs
vm/src/vm/context/: mod.rs  run_context.rs
vm/src/vm/decoding/: decoder.rs
vm/src/vm/errors/: cairo_pie_errors.rs  cairo_run_errors.rs  exec_scope_errors.rs  hint_errors.rs  memory_errors.rs  mod.rs  runner_errors.rs  trace_errors.rs  vm_errors.rs  vm_exception.rs
vm/src/vm/runners/: cairo_function_runner.rs  cairo_function_runner_test.rs  cairo_pie.rs  cairo_runner.rs  cairo_runner_2.rs  mod.rs
vm/src/vm/runners/builtin_runner/: bitwise.rs  (+11 more)
vm/src/vm/trace/: mod.rs
vm/src/vm/vm_memory/: memory.rs  memory_segments.rs  mod.rs
(+1151 files in other folders)
