[workspace]
members = ["cairo-vm-cli", "felt", "vm", "hint_accountant"]
exclude = ["ensure-no_std"]

[workspace.package]
version = "0.8.1"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/lambdaclass/cairo-vm/"
readme = "README.md"

[workspace.dependencies]
felt = { package = "cairo-felt", path = "./felt", version = "0.8.1", default-features = false, features = [
    "alloc",
] }
cairo-vm = { path = "./vm", version = "0.8.1", default-features = false }
mimalloc = { version = "0.1.29", default-features = false }
num-bigint = { version = "0.4", default-features = false, features = [
    "serde",
    "rand",
] }
rand = { version = "0.8.3", features = ["small_rng"], default-features = false }
num-traits = { version = "0.2", default-features = false }
num-integer = { version = "0.1.45", default-features = false }
serde = { version = "1.0", features = ["derive"], default-features = false }
serde_json = { version = "1.0", features = [
    "arbitrary_precision",
    "alloc",
], default-features = false }
hex = { version = "0.4.3", default-features = false }
bincode = { version = "2.0.0-rc.2", tag = "v2.0.0-rc.2", git = "https://github.com/bincode-org/bincode.git", default-features = false, features = [
    "serde",
] }
starknet-crypto = { version = "0.5.0", default-features = false, features = [
    "signature-display",
    "alloc",
] }
sha3 = { version = "0.10.1", default-features = false }
lazy_static = { version = "1.4.0", default-features = false, features = [
    "spin_no_std",
] }
nom = { version = "7", default-features = false }
sha2 = { version = "0.10.2", features = ["compress"], default-features = false }
generic-array = { version = "0.14.6", default-features = false }
keccak = { version = "0.1.2", default-features = false }
hashbrown = { version = "0.13.2", features = ["serde"] }
anyhow = { version = "1.0.69", default-features = false }
thiserror-no-std = { version = "2.0.2", default-features = false }

bitvec = { version = "1", default-features = false, features = ["alloc"] }

# Dependencies for cairo-1-hints feature
cairo-lang-starknet = { version = "2.0.0-rc6", default-features = false }
cairo-lang-casm = { version = "2.0.0-rc6", default-features = false }

# TODO: check these dependencies for wasm compatibility
ark-ff = { version = "0.4.0-alpha.7", default-features = false }
ark-std = { version = "0.3.0", default-features = false }

[profile.release]
lto = "fat"
