[workspace]
members = [
    "cairo-vm-cli",
    "vm",
    "hint_accountant",
    "examples/wasm-demo",
    "examples/wasm-demo-cairo1",
    "cairo1-run",
    "cairo-vm-tracer",
    "examples/hyper_threading",
]
default-members = ["cairo-vm-cli", "vm", "cairo1-run"]

# Explicitly set the resolver to the default for edition >= 2021
# https://doc.rust-lang.org/edition-guide/rust-2021/default-cargo-resolver.html
resolver = "2"

[workspace.package]
version = "3.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/lambdaclass/cairo-vm/"
readme = "README.md"
keywords = ["starknet", "cairo", "vm", "wasm"]

[workspace.dependencies]
cairo-vm = { path = "./vm", version = "3.1.0" }
cairo-vm-tracer = { path = "./cairo-vm-tracer", version = "3.1.0" }
mimalloc = { version = "0.1.37", default-features = false }
num-bigint = { version = "0.4", features = ["serde", "rand"] }
rand = { version = "0.8.5", features = ["small_rng"] }
num-traits = { version = "0.2" }
num-integer = { version = "0.1.45" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
hex = { version = "0.4.3" }
starknet-crypto = { version = "0.8.0", features = ["signature-display"] }
sha3 = { version = "0.10.8" }
indoc = { version = "2.0.5" }
lazy_static = { version = "1.4.0" }
nom = { version = "7" }
sha2 = { version = "0.10.7", features = ["compress"] }
generic-array = { version = ">=0.14.0, <=0.14.7" }
keccak = { version = "0.1.2" }
anyhow = { version = "1.0.94" }
thiserror = { version = "2" }
tracing = { version = "0.1" }

bitvec = { version = "1" }

# Dependencies for cairo-1-hints feature
cairo-lang-casm = { version = "2.12.0-dev.0" }

cairo-lang-starknet-classes = { version = "2.12.0-dev.0" }
cairo-lang-compiler = { version = "=2.12.0-dev.0" }
cairo-lang-sierra-to-casm = { version = "2.12.0-dev.0" }
cairo-lang-sierra = { version = "2.12.0-dev.0" }
cairo-lang-runner = { version = "2.12.0-dev.0" }
cairo-lang-utils = { version = "=2.12.0-dev.0" }

# TODO: check these dependencies for wasm compatibility
ark-ff = { version = "0.4.2" }
ark-std = { version = "0.4.0" }

# For fuzzing
arbitrary = { version = "1.3.0", features = ["derive"] }

[profile.test]
opt-level = 2

[profile.release]
lto = "fat"

[profile.release.package.wasm-demo]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

[profile.release.package.wasm-demo-cairo1]
opt-level = "s"

[profile.test.package.proptest]
opt-level = 3

[profile.test.package.rand_chacha]
opt-level = 3
