[package]
name = "cairo-1-hint-processor"
version = "0.1.0"
edition = "2021"

[dependencies]
cairo-vm = { path = ".." }
cairo-lang-casm = { git = "https://github.com/starkware-libs/cairo" }
ark-ff = "0.4.0-alpha.7"
ark-std = "0.3.0"
num-bigint = { version = "0.4", default-features = false }
cairo-lang-utils = "0.1.0"
num-integer = "0.1.45"
num-traits = "0.2.15"

