[package]
name = "cairo-vm-tracer"
version = "0.5.2"
edition = "2021"
license = "Apache-2.0"
description = "Tracer to see step wise execution of Cairo instructions"

[features]
default = ["std"]
std = []
alloc = []
tracer = []

[dependencies]
cairo-vm = { workspace = true }
thiserror-no-std = { workspace = true }
num-bigint = { workspace = true }
num-traits = { workspace = true }
axum = "0.6.18"
tokio = {version = "1.28.2", features = ["rt", "macros","rt-multi-thread"]}
serde = { workspace = true }
tower = { version = "0.4.13", features = ["util"] }
tower-http = { version = "0.4.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
include_dir = "0.7.3"
mime_guess = "2.0.4"

[dev-dependencies]