[package]
name = "cairo-vm-tracer"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

[features]
default = ["std"]
std = []
alloc = []

[dependencies]
cairo-vm = { workspace = true, features = ["test_utils"] }
thiserror = { workspace = true, features = ["std"] }
num-bigint = { workspace = true }
num-traits = { workspace = true }
axum = "0.6.18"
tokio = {version = "1.28.2", features = ["rt", "macros","rt-multi-thread"]}
serde = { workspace = true }
tower = { version = "0.4.13", features = ["util"] }
tower-http = { version = "0.4.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
include_dir = "0.7.3"
mime_guess = "2.0.4"
