[package]
name = "cairo1-run"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cairo-vm = { workspace = true, features = ["std", "cairo-1-hints", "clap"] }
serde_json = { workspace = true }

cairo-lang-sierra-type-size = { path = "../../cairo/crates/cairo-lang-sierra-type-size", default-features = false }
cairo-lang-sierra-ap-change = { path = "../../cairo/crates/cairo-lang-sierra-ap-change", default-features = false }
cairo-lang-sierra-gas = { path = "../../cairo/crates/cairo-lang-sierra-gas", default-features = false }
cairo-lang-starknet-classes.workspace = true
cairo-lang-sierra-to-casm.workspace = true
cairo-lang-compiler.workspace = true
cairo-lang-sierra.workspace = true
cairo-lang-utils.workspace = true
cairo-lang-casm.workspace = true
itertools = "0.11.0"
clap = { version = "4.3.10", features = ["derive"] }
thiserror = { workspace = true, features = ["std"] }
bincode.workspace = true
assert_matches = "1.5.0"
rstest = "0.17.0"
mimalloc = { version = "0.1.37", default-features = false, optional = true }
num-traits = { version = "0.2", default-features = false }
num-bigint.workspace = true

[features]
default = ["with_mimalloc"]
with_mimalloc = ["dep:mimalloc"]
mod_builtin = ["cairo-vm/mod_builtin"]
