[package]
name = "custom_hint_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cairo-rs =  {path = "../"}
felt = { package = "cairo-felt", path = "../felt", version = "0.1.0" }
num-bigint = "0.4" 
