[package]
name = "ensure-no_std"
version = "0.1.0"
edition = "2021"

[dependencies]
cairo-felt = { path = "../felt", default-features = false, features = [
    "alloc",
] }
cairo-vm = { path = "../vm", default-features = false }

esp-alloc = "0.3.0"

[features]
default = ["lambdaworks-felt"]
lambdaworks-felt = ["cairo-felt/lambdaworks-felt"]


[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
