[package]
name = "ensure_no_std"
version = "0.1.0"
edition = "2021"

[dependencies]
cairo-felt = { path = "../felt", default-features = false }
cairo-vm = { path = "../vm", default-features = false }

wee_alloc = "0.4.5"

[features]
alloc = ["cairo-felt/alloc"]


[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
