[package]
name = "cairo-felt"
description = "Field elements representation for the Cairo VM"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

[features]
default = ["std"]
std = []
alloc = []
lambdaworks-felt = ["dep:lambdaworks-math"]

[dependencies]
num-integer = { version = "0.1.45", default-features = false }
num-bigint = { version = "0.4", features = ["serde"], default-features = false }
num-traits = { version = "0.2.15", default-features = false }
lazy_static = { version = "1.4.0", default-features = false, features = [
    "spin_no_std",
] }
serde = { version = "1.0", features = ["derive"], default-features = false }
lambdaworks-math = { version = "0.1.2", default-features = false, optional = true }

[dev-dependencies]
proptest = "1.1.0"
rstest = { version = "0.17.0", default-features = false }
