[package]
name = "fuzzer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["."]

[dependencies]
honggfuzz = "0.5.55"
cairo-vm = { path = "../vm", features = ["arbitrary"] }
cairo-felt = { path = "../felt", features = ["arbitrary"] }
arbitrary = { version = "1.3.0", features = ["derive"] }
serde = { version = "1.0.175", features = ["derive"] }
serde_json = "1.0.103"

[[bin]]
name = "fuzz_json"
path = "src/fuzz_json.rs"

[[bin]]
name = "fuzz_program"
path = "src/fuzz_program.rs"

[[bin]]
name = "playground"
path = "src/playground.rs"

[profile.release]
debug = true
