[package]
name = "fuzzer"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata]
cargo-fuzz = true

[workspace]
members = ["."]

[dependencies]
arbitrary = { version = "1.3.0", features = ["derive"] }
cairo-vm = { path = "../vm", features = ["arbitrary"] }
honggfuzz = "0.5.55"
libfuzzer-sys = "0.4"
num-bigint = "0.4"
pyo3 = { version = "0.19.2", features = ["extension-module"] }
serde = { version = "1.0.180", features = ["derive"] }
serde_json = "1.0.104"

[[bin]]
name = "fuzz_json"
path = "src/fuzz_json.rs"

[[bin]]
name = "cairo_compiled_programs_fuzzer"
path = "src/cairo_compiled_programs_fuzzer.rs"

[[bin]]
name = "fuzz_program"
path = "src/fuzz_program.rs"

[lib]
name = "cairo_vm_rs"
path = "src/py_export.rs"
crate-type = ["cdylib"]
