[package]
name = "hint_accountant"
version = "0.8.0"
edition = "2021"
license = "Apache-2.0"
description = "A script to check which whitelisted hints we're missing"

[dependencies]
cairo-vm = { path = "../vm", version = "0.8.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
