[package]
name = "hint_accountant"
description = "A script to check which whitelisted hints we're missing"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
cairo-vm = { path = "../vm", version = "0.8.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
