[package]
name = "python-hints"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "python_hints"
crate-type = ["cdylib"]

[dependencies]
num-bigint = "0.4"
pyo3 = { version = "0.16.5", features = ["extension-module", "num-bigint"] }
cairo-rs = { path = ".." }
